--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                             <div class="section-category-item__two">
                                 <a href="" class="section-category-item__grid">
                                     <div class="section-category-item__grid-img" style="background-image: url(./asset/img/phone-icon.png); background-size: contain; background-repeat: no-repeat;"></div>
-                                    <p class="section-category-item__grid-name">Điện thoại Xiaomi</p>
+                                    <p class="section-category-item__grid-name">Điện thoại Xiaomi ajsgdkashdakjshgcasugcashkgyit</p>
                                 </a>
                             </div>
                             <div class="section-category-item__two">
