--- a/index.html
+++ b/index.html
@@ -985,7 +985,7 @@
         </div>
         <a href="" class="new-year" style="display: block;position: relative;">
             <div class="promotebanner b1">
-                <img style="cursor:pointer;width: 100%;margin-top: 9px;" src="https://cdn.tgdd.vn/2020/12/banner/xa-kho-1200-75-1200x75.png" alt="xa hang" width="1200" height="75">
+                <img style="cursor:pointer;width: 100%;margin-top: 9px;" src="./asset/img/noennnn/xa-kho-1200-75-1200x75.png" alt="xa hang" width="1200" height="75">
             </div>
         </a>
 
@@ -1190,7 +1190,7 @@
 
         <a href="" class="new-customer" style="display: block;position: relative;">
             <div class="style__StyledCallout-g2h8v0-0 bSfpQf">
-                <img src="https://salt.tikicdn.com/ts/banner/7c/aa/05/05f8119e8d13328a782a35ec01a7ea8d.png" style="width: 100%">
+                <img src="./asset/img/noennnn/05f8119e8d13328a782a35ec01a7ea8d.png" style="width: 100%">
             </div>
         </a>
 
