--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel= "stylesheet" href="asset/css/grid.css">
+    <link rel="stylesheet" href="asset/css/contact.css">
     <link href="asset/css/product.css" rel="stylesheet">
     <link rel="stylesheet" href="./asset/css/normalize.min.css" />
     <link rel="stylesheet" href="./asset/css/base.css" />
@@ -13,10 +15,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./asset/font/fontawesome-free-5.15.1-web/css/all.min.css" />
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-    <link rel="stylesheet" href="./asset/css/style.css">
-    <link rel= "stylesheet" href="asset/css/grid.css">
-    <link rel="stylesheet" href="asset/css/contact.css">
-    <link rel="stylesheet" href="asset/css/bootstrap.min.css">
+<!--    <link rel="stylesheet" href="./asset/css/style.css">-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="./asset/css/button.css" />
     <link rel="stylesheet" href="./asset/css/footer.css">
 </head>
@@ -144,10 +144,6 @@
             </div>
         </header>
     </div>
-    <!-- Contact form -->
-    <div class="container">
-
-    </div>
 
     <!-- map -->
     <div class="map" >
@@ -162,43 +158,76 @@
                     <div class="contact__text">
                         <div class="section-title">
                             <h2>Contact Us</h2>
-                            <p>As you might expect of a company that began as a high-end interiors contractor, we pay
-                                strict attention.</p>
                         </div>
                         <ul>
                             <li>
                                 <h4>Việt Nam</h4>
                                 <p>Khu phố 6 phường Linh Trung quận Thủ Đức <br />0123 456 789</p>
                             </li>
+                        </ul>
+                        <div class="contact__form">
+                            <form action="#">
+                                <div class="contact__content">
+                                    <input type="text" placeholder="Name">
+                                </div>
+                                <div class="contact__content">
+                                    <input type="text" placeholder="Email">
+                                </div>
+                                <div class="contact__content">
+                                    <input type="text" placeholder="Địa chỉ">
+                                </div>
+                                <div class="contact__content">
+                                    <input type="text" placeholder="Số điện thoại ">
+                                </div>
+                                <div class="contact__content">
+                                    <textarea placeholder="Message"></textarea>
+                                </div>
+                                <button type="submit" class="site-btn">Send Message</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6">
+                    <div class="contact__text">
+                        <div class="section-title">
+                            <h2>Cửa hàng và chi nhánh </h2>
+                        </div>
+                        <ul>
                             <li>
                                 <h4>Việt Nam</h4>
                                 <p>Khu phố 6 phường Linh Trung quận Thủ Đức <br />0123 456 789</p>
                             </li>
                         </ul>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6" style="margin-top: 40px">
-                    <div class="contact__form">
-                        <form action="#">
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <input type="text" placeholder="Name">
-                                </div>
-                                <div class="col-lg-6">
-                                    <input type="text" placeholder="Email">
-                                </div>
-                                <div class="col-lg-6">
-                                    <input type="text" placeholder="Địa chỉ">
-                                </div>
-                                <div class="col-lg-6">
-                                    <input type="text" placeholder="Số điện thoại ">
-                                </div>
-                                <div class="col-lg-12">
-                                    <textarea placeholder="Message"></textarea>
-                                    <button type="submit" class="site-btn">Send Message</button>
-                                </div>
-                            </div>
-                        </form>
+                        <ul>
+                            <li>
+                                <h4>Việt Nam</h4>
+                                <p>Khu phố 6 phường Linh Trung quận Thủ Đức <br />0123 456 789</p>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li>
+                                <h4>Việt Nam</h4>
+                                <p>Khu phố 6 phường Linh Trung quận Thủ Đức <br />0123 456 789</p>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li>
+                                <h4>Việt Nam</h4>
+                                <p>Khu phố 6 phường Linh Trung quận Thủ Đức <br />0123 456 789</p>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li>
+                                <h4>Việt Nam</h4>
+                                <p>Khu phố 6 phường Linh Trung quận Thủ Đức <br />0123 456 789</p>
+                            </li>
+                        </ul>
+                        <ul>
+                            <li>
+                                <h4>Việt Nam</h4>
+                                <p>Khu phố 6 phường Linh Trung quận Thủ Đức <br />0123 456 789</p>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -299,42 +328,8 @@
         </div>
     </footer>
     <!-- Footer Section End -->
-    <!-- The Modal -->
-    <div id="myModal2" class="modal">
-
-        <!-- Modal content -->
-        <div class="product-view">
-            <p id="close-btn" onclick="closeModal()" class="close-btn close">&times;</p>
-            <div class="product-big-image">
-                <img src="./asset/img/images/Banner-xiaomi-J3SBanner-pc-global.jpgBanner-xiaomi2.jpg" alt="">
-            </div>
-            <div class="product-big-desc">
-                <h2>product desc big</h2>
-                <h5>Product code: 32312</h5>
-                <h5>Brand: Malhskjdh</h5>
-                <h6><a href="#">1 review</a><a href="#">View all review</a></h6>
-                <div class="priceModal">
-                    <h4 class="oldprice"><del>Rs. 2260</del><sup>25% OFF</sup></h4>
-                    <h4 class="newprice">Rs. 1999 + <abbr>99 Shipping</abbr></h4>
-                </div>
-                <button class="buybutton zoom">Thêm vào giỏ hàng</button>
-                <button class="detailbutton zoom">Xem chi tiết</button>
-                <p><b>Warranty :</b> 1day sdakshjfhaskdadlasdjsahdfljsdk</p>
-                <p><b>Sippng :</b>sakjdgajshdlkjdkdkkhksahfkasd.alsdhkaksjasasdsadfasdfasdcsdafsdf</p>
-            </div>
-        </div>
-
-    </div>
-    <!-- end modal -->
-    <!-- The Modal -->
-    <div id="myModal1" class="modal">
-
-        <!-- Modal content -->
-        <div class="modal-content">
-            <p id="closeModal2" onclick="closeModal()" class="close">&times;</p>
-            <p>Some text in the Modal..2</p>
-        </div>
-
-    </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
